# mario_task

./: .env.example  .gitignore  README-WINDOWS.txt  README.md  install.bat  install.ps1  justfile  pyproject.toml  run.ps1  run.sh  setup_env.ps1  setup_env.sh
.github/workflows/: install-test.yml  release.yml  tests.yml
docs/: install-windows-vm.md  releasing.md
mario_task/: __init__.py  __main__.py  audio.py  cli.py  design.py  engine.py  gui.py  input.py  log_setup.py  markers.py  monitor.py  paths.py  phases.py  questionnaire.py  savestate.py  session.py  settings.py  task.py  verify.py
scripts/: lint-powershell.sh  package-windows-release.sh
tests/: test_design.py  test_gui.py  test_markers.py  test_paths.py  test_phases.py  test_questionnaire.py  test_savestate.py  test_settings.py  test_verify.py
