[project]
name = "mario_task"
version = "0.2.22"
description = "NES Super Mario Bros experiment runner with EEG/iEEG markers and BIDS output."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Yann Harel", email = "yharel109@gmail.com" }]
dependencies = [
    # Stimulus engine
    "psychopy",
    "stable-retro",
    # wxPython MUST be pinned via tool.uv.sources below — see comment.
    "wxPython",
    # Numerical / data
    "numpy<2",
    "pandas>=1.5",
    # Audio / image (pulled in by psychopy too, pinned here for clarity)
    "sounddevice",
    "soundfile",
    "Pillow",
    # I/O for EEG markers
    "pylsl",
    "pyserial",
    # Linux-only parallel-port marker support; Windows uses LSL or serial
    'pyparallel; sys_platform == "linux"',
    # Misc
    "python-dotenv",
    "tqdm",
    # ROM data acquisition (used by setup_env, but kept in venv so `uv run` works)
    "datalad",
]

# wxPython gotcha: PyPI's 4.2.5 is built against wxWidgets 3.2.6, but
# Ubuntu 24.04 ships wxWidgets 3.2.4 — so loading psychopy.visual at
# runtime dies with "libwx_baseu-3.2.so.0: version `WXU_3.2.6' not found".
# The wxpython.org extras index hosts wheels built against each Ubuntu
# release's system libwx. We pin to the exact extras-index wheel for
# Ubuntu 24.04 + Python 3.10 on Linux, and let Windows resolve PyPI's
# 4.2.5 (which works fine because Windows wheels bundle their own libwx).
# If you upgrade the target Ubuntu or Python version, swap the URL here.
[tool.uv.sources]
wxpython = [
    { url = "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/wxPython-4.2.2-cp310-cp310-linux_x86_64.whl", marker = "sys_platform == 'linux' and python_version == '3.10'" },
]
# stable-retro: vendored into .cache/stable-retro by setup_env.{sh,ps1}
# before uv sync runs. We need a local path source (not a git source)
# because we apply a runtime patch to CMakeLists.txt: skip the fbneo
# (Final Burn Neo Arcade) and parallel_n64 cores on Windows, where
# upstream's build doesn't work (fbneo's libretro Makefile assumes a
# MinGW 3.x layout we don't have; we only need NES for Mario anyway).
# Pinned via the setup script to commit 24180f5d so the install stays
# reproducible. .cache/ is gitignored.
stable-retro = { path = ".cache/stable-retro" }

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
]

[project.scripts]
mario-task = "mario_task.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mario_task"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]  # import sorting
ignore = ["E501"]      # let line-length handle long lines

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a display + psychopy + retro (skipped in CI)",
]
